clusters/home.axe.al/projects/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: blog
        image: axeal/axe.al:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
          - mountPath: /tmp
            name: tmp
